--- a/trunk/projects/VS2010/QuimeraEngine/System/System.vcxproj.filters
+++ b/trunk/projects/VS2010/QuimeraEngine/System/System.vcxproj.filters
@@ -133,6 +133,9 @@
     <ClInclude Include="..\..\..\..\headers\QScopedSharedLock.h">
       <Filter>Threading</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\headers\QCallStackTracer.h">
+      <Filter>Diagnosis</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\source\QLocalTimeZone.cpp">
@@ -217,6 +220,9 @@
       <Filter>Diagnosis</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\source\QAbstractCallStackTracePrinter.cpp">
+      <Filter>Diagnosis</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\source\QCallStackTracer.cpp">
       <Filter>Diagnosis</Filter>
     </ClCompile>
   </ItemGroup>
