596 - QTextStreamWriter Done. A QAbstractCallStackTracePrinter's test fixed.

--- a/trunk/projects/CodeLite/QuimeraEngine/System/System.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/System/System.project
@@ -137,6 +137,7 @@
     <File Name="../../../../headers/EQNewLineCharacters.h"/>
     <File Name="../../../../headers/QTextStreamReader.h"/>
     <File Name="../../../../source/EQNewLineCharacters.cpp"/>
+    <File Name="../../../../headers/QTextStreamWriter.h"/>
   </VirtualDirectory>
   <VirtualDirectory Name="Diagnosis">
     <File Name="../../../../headers/QArgumentTrace.h"/>
