--- a/trunk/projects/VS2010/QuimeraEngine/System/System.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/System/System.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="..\..\..\..\headers\QCallStackTracer.h" />
     <ClInclude Include="..\..\..\..\headers\QCallTrace.h" />
     <ClInclude Include="..\..\..\..\headers\QBinaryStreamWriter.h" />
+    <ClInclude Include="..\..\..\..\headers\QTextStreamWriter.h" />
     <ClInclude Include="..\..\..\..\headers\QTypeWithGetType.h" />
     <ClInclude Include="..\..\..\..\headers\QTypeWithToString.h" />
     <ClInclude Include="..\..\..\..\headers\QConditionVariable.h" />
