--- a/trunk/testing/projects/VS2010/QEUnitTests/System/System.vcxproj
+++ b/trunk/testing/projects/VS2010/QEUnitTests/System/System.vcxproj
@@ -37,6 +37,7 @@
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QScopedSharedLock_Test.cpp" />
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QSharedMutex_Test.cpp" />
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QStopwatch_Test.cpp" />
+    <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QTextStreamWriter_Test.cpp" />
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QThread_Test.cpp" />
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QTextStreamReader_Test.cpp" />
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QUri_Test.cpp" />
