--- a/trunk/projects/CodeLite/QuimeraEngine/System/System.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/System/System.project
@@ -176,6 +176,7 @@
     <File Name="../../../../headers/QConditionVariable.h"/>
     <File Name="../../../../source/QConditionVariable.cpp"/>
     <File Name="../../../../headers/QScopedSharedLock.h"/>
+    <File Name="../../../../headers/QScopedLockPair.h"/>
   </VirtualDirectory>
   <Settings Type="Dynamic Library">
     <GlobalSettings>
