--- a/trunk/testing/projects/CodeLite/QEUnitTests/System/System.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/System/System.project
@@ -121,6 +121,7 @@
       <File Name="../../../../tests/unit/testmodule_system/QConditionVariable_Test.cpp"/>
       <File Name="../../../../tests/unit/testmodule_system/QSharedMutex_Test.cpp"/>
       <File Name="../../../../tests/unit/testmodule_system/QScopedSharedLock_Test.cpp"/>
+      <File Name="../../../../tests/unit/testmodule_system/QScopedLockPair_Test.cpp"/>
     </VirtualDirectory>
   </VirtualDirectory>
   <VirtualDirectory Name="TestSystem (shared)">
