--- a/trunk/testing/projects/VS2010/QEUnitTests/System/System.vcxproj.filters
+++ b/trunk/testing/projects/VS2010/QEUnitTests/System/System.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QTextStreamWriter_Test.cpp">
       <Filter>Tests\IO</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QScopedLockPair_Test.cpp">
+      <Filter>Tests\Threading</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\testsystem\CommonConfigDefinitions.h">
