559 - QStopWatchEnclosed Done. QStopwatch::GetElapsedTimeAsFloat has been modified so its precision depends on the float precision compilation flag.

--- a/trunk/projects/CodeLite/QuimeraEngine/System/System.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/System/System.project
@@ -110,6 +110,10 @@
     <File Name="../../../../source/QDateTimeNow.cpp"/>
     <File Name="../../../../headers/QStopwatch.h"/>
     <File Name="../../../../source/QStopwatch.cpp"/>
+    <File Name="../../../../headers/EQStopwatchEnclosedBehavior.h"/>
+    <File Name="../../../../headers/QStopwatchEnclosed.h"/>
+    <File Name="../../../../source/EQStopwatchEnclosedBehavior.cpp"/>
+    <File Name="../../../../source/QStopwatchEnclosed.cpp"/>
   </VirtualDirectory>
   <VirtualDirectory Name="IO">
     <File Name="../../../../headers/QMemoryStream.h"/>
