550 - QEvent Done. Operators == and != added to QDelegate, as well as their unit tests. A protected data member of internal delegate classes has been made public. New comparators added: SQNoComparator and SQEqualityComparator. The later was necessary since QDelegate does not have operator >.

--- a/trunk/projects/CodeLite/QuimeraEngine/Tools/Tools.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/Tools/Tools.project
@@ -196,6 +196,8 @@
     <File Name="../../../../headers/SQComparatorDefault.h"/>
     <File Name="../../../../headers/QKeyValuePair.h"/>
     <File Name="../../../../headers/SQKeyValuePairComparator.h"/>
+    <File Name="../../../../headers/SQEqualityComparator.h"/>
+    <File Name="../../../../headers/SQNoComparator.h"/>
   </VirtualDirectory>
   <VirtualDirectory Name="Time">
     <File Name="../../../../headers/QDateTime.h"/>
@@ -497,4 +499,7 @@
       </Completion>
     </Configuration>
   </Settings>
+  <VirtualDirectory Name="Common">
+    <File Name="../../../../headers/QEvent.h"/>
+  </VirtualDirectory>
 </CodeLite_Project>
