--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
@@ -193,6 +193,7 @@
     <ClInclude Include="..\..\..\..\headers\QDateTime.h" />
     <ClInclude Include="..\..\..\..\headers\QDualQuaternion.h" />
     <ClInclude Include="..\..\..\..\headers\QDynamicArray.h" />
+    <ClInclude Include="..\..\..\..\headers\QEvent.h" />
     <ClInclude Include="..\..\..\..\headers\QFixedArray.h" />
     <ClInclude Include="..\..\..\..\headers\QHexahedron.h" />
     <ClInclude Include="..\..\..\..\headers\QKeyValuePair.h" />
@@ -231,7 +232,9 @@
     <ClInclude Include="..\..\..\..\headers\QVector4.h" />
     <ClInclude Include="..\..\..\..\headers\SQAngle.h" />
     <ClInclude Include="..\..\..\..\headers\SQComparatorDefault.h" />
+    <ClInclude Include="..\..\..\..\headers\SQEqualityComparator.h" />
     <ClInclude Include="..\..\..\..\headers\SQKeyValuePairComparator.h" />
+    <ClInclude Include="..\..\..\..\headers\SQNoComparator.h" />
     <ClInclude Include="..\..\..\..\headers\SQPoint.h" />
     <ClInclude Include="..\..\..\..\headers\SQTimeZoneFactory.h" />
     <ClInclude Include="..\..\..\..\headers\ToolsDefinitions.h" />
