--- a/trunk/projects/VS2010/QuimeraEngine/System/System.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/System/System.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="..\..\..\..\headers\QCallStackTracer.h" />
     <ClInclude Include="..\..\..\..\headers\QCallTrace.h" />
     <ClInclude Include="..\..\..\..\headers\QBinaryStreamWriter.h" />
+    <ClInclude Include="..\..\..\..\headers\QScopedCallTraceNotifier.h" />
     <ClInclude Include="..\..\..\..\headers\QTextStreamWriter.h" />
     <ClInclude Include="..\..\..\..\headers\QScopedLockPair.h" />
     <ClInclude Include="..\..\..\..\headers\QStopwatchEnclosed.h" />
@@ -220,6 +221,7 @@
     <ClCompile Include="..\..\..\..\source\QDateTimeNow.cpp" />
     <ClCompile Include="..\..\..\..\source\QFileStream.cpp" />
     <ClCompile Include="..\..\..\..\source\QMutex.cpp" />
+    <ClCompile Include="..\..\..\..\source\QScopedCallTraceNotifier.cpp" />
     <ClCompile Include="..\..\..\..\source\QSharedMutex.cpp" />
     <ClCompile Include="..\..\..\..\source\QRecursiveMutex.cpp" />
     <ClCompile Include="..\..\..\..\source\QStopwatchEnclosed.cpp" />
